Increase MaxPermSize to 256m