@@ -23,6 +23,7 @@ subprojects {
 
     tasks.withType(Test) { forkEvery = 1 }
     test {
+        jvmArgs += [ "-XX:MaxPermSize=256m" ]
         maxHeapSize = '2g' // or however much memory the tests need
         testLogging {
             events 'started', 'failed', 'passed', 'skipped'
